[update] 코드 최적화 (#33)
* [update] 데이터 추가 및 n+1 문제 해결

* [update] CompanionService 코드 최적화

1. 리스트 단건 save -> saveAll로 배치 저장으로 개선
2. 정적인 객체 상수 -> static 변경

* [update] TripListService 코드 최적화

1. 크기 고정인 리스트, 가변 아닌 Arrays 사용